# cargo-chef

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs  coverage.sh  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: audit-on-push.yml  docker.yml  general.yml  publish_binaries.yml  scheduled-audit.yml  tag-and-publish.yml
docker/: Dockerfile  README.md
src/: lib.rs  main.rs  recipe.rs  skeleton.rs
src/skeleton/: mod.rs  read.rs  target.rs  version_masking.rs  workspace.rs
tests/: recipe.rs  skeletons.rs
tests/caching/: main.rs  tests.rs
tests/caching/helpers/: cargo.rs  fs.rs  manifest.rs  mod.rs  model.rs  project.rs  steps.rs
tests/skeletons/: main.rs  support.rs
tests/skeletons/tests/: core.rs  masking.rs  mod.rs  toolchain.rs  workspace.rs
