[package]
name = "cargo-chef"
version = "0.1.18"
authors = ["Luca Palmieri <lpalmieri@truelayer.com>"]
edition = "2018"
description = "A cargo sub-command to build project dependencies for optimal Docker layer caching."
keywords = ["cargo", "docker", "caching", "dependencies"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
repository = "https://github.com/LukeMathWalker/cargo-chef"
documentation = "https://docs.rs/cargo-chef"
license = "Apache-2.0 OR MIT"
exclude = ["tests"]

[[bin]]
name = "cargo-chef"
path = "src/main.rs"

[lib]
name = "chef"
path = "src/lib.rs"

[dependencies]
atty = "0.2.14"
clap = "3.0.0-beta.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.11"
env_logger = "0.8.1"
globwalk = "0.8.0"
anyhow = "1.0.33"
pathdiff = "0.2.0"
cargo-manifest = "0.2.3"
fs-err = "2.5.0"
toml = { version = "0.5.7", features = ["preserve_order"] }

[dev-dependencies]
assert_cmd = "1.0.1"
assert_fs = "1.0.0"
