[package]
name = "cargo-chef"
version = "0.1.67"
authors = ["Luca Palmieri <lpalmieri@truelayer.com>"]
edition = "2018"
description = "A cargo sub-command to build project dependencies for optimal Docker layer caching."
keywords = ["cargo", "docker", "caching", "dependencies"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
repository = "https://github.com/LukeMathWalker/cargo-chef"
documentation = "https://docs.rs/cargo-chef"
license = "Apache-2.0 OR MIT"
exclude = ["tests"]

[[bin]]
name = "cargo-chef"
path = "src/main.rs"

[lib]
name = "chef"
path = "src/lib.rs"

[profile.max-perf-at-small-bin]
lto = "fat"
strip = true
opt-level = "z"
codegen-units = 1

[dependencies]
clap = { version = "4", features = ["cargo", "env", "derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
env_logger = "0.11.3"
globwalk = "0.9.1"
anyhow = "1.0.86"
pathdiff = "0.2.0"
cargo-manifest = "0.15"
fs-err = "2.5.0"
toml = { version = "0.8", features = ["preserve_order"] }
expect-test = "1.5.0"
cargo_metadata = "0.18.1"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1.0.0"
predicates = "3"
