[package]
name = "cargo-chef"
version = "0.1.75"
authors = ["Luca Palmieri <lpalmieri@truelayer.com>"]
edition = "2018"
description = "A cargo sub-command to build project dependencies for optimal Docker layer caching."
keywords = ["cargo", "docker", "caching", "dependencies"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
repository = "https://github.com/LukeMathWalker/cargo-chef"
documentation = "https://docs.rs/cargo-chef"
license = "Apache-2.0 OR MIT"
exclude = ["tests"]

[[bin]]
name = "cargo-chef"
path = "src/main.rs"

[lib]
name = "chef"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["cargo", "env", "derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
env_logger = "0.11"
globwalk = "0.9.1"
anyhow = "1.0.102"
pathdiff = "0.2.3"
cargo-manifest = "0.20.0"
fs-err = "3.3.0"
toml = { version = "1.0", features = ["preserve_order"] }
expect-test = "1.5.1"
guppy = "0.17"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1.1.3"
predicates = "3"
rstest = "0.26"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
